data/forge_javadoc/1.12.2/raw/net/minecraft/world/biome/BiomeDecorator.md
---
title: "BiomeDecorator"
description: "public class BiomeDecorator extends java.lang.Object"
package: "net/minecraft/world/biome"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/world/biome/BiomeDecorator.html"
sourceType: javadoc
---

# BiomeDecorator

**Inheritance:** java.lang.Object → net.minecraft.world.biome.BiomeDecorator

## Class signature

```java
public class BiomeDecorator extends java.lang.Object
```

## Constructors

- `BiomeDecorator()`

## Methods

- `void decorate(World worldIn, java.util.Random random, Biome biome, BlockPos pos)`
- `protected void genDecorations(Biome biomeIn, World worldIn, java.util.Random random)`
- `protected void generateOres(World worldIn, java.util.Random random)`
- `protected void genStandardOre1(World worldIn, java.util.Random random, int blockCount, WorldGenerator generator, int minHeight, int maxHeight)`
- `protected void genStandardOre2(World worldIn, java.util.Random random, int blockCount, WorldGenerator generator, int centerHeight, int spread)`

## Fields

- `WorldGenerator andesiteGen`
- `WorldGenerator bigMushroomGen`
- `int bigMushroomsPerChunk`
- `int cactiPerChunk`
- `WorldGenerator cactusGen`
- `BlockPos chunkPos`
- `ChunkGeneratorSettings chunkProviderSettings`
- `WorldGenerator clayGen`
- `int clayPerChunk`
- `WorldGenerator coalGen`
- `int deadBushPerChunk`
- `boolean decorating`
- `WorldGenerator diamondGen`
- `WorldGenerator dioriteGen`
- `WorldGenerator dirtGen`
- `float extraTreeChance`
- `WorldGenFlowers flowerGen`
- `int flowersPerChunk`
- `boolean generateFalls`
- `WorldGenerator goldGen`
- `WorldGenerator graniteGen`
- `int grassPerChunk`
- `WorldGenerator gravelGen`
- `WorldGenerator gravelOreGen`
- `int gravelPatchesPerChunk`
- `WorldGenerator ironGen`
- `WorldGenerator lapisGen`
- `WorldGenerator mushroomBrownGen`
- `WorldGenerator mushroomRedGen`
- `int mushroomsPerChunk`
- `WorldGenerator redstoneGen`
- `WorldGenerator reedGen`
- `int reedsPerChunk`
- `WorldGenerator sandGen`
- `int sandPatchesPerChunk`
- `int treesPerChunk`
- `WorldGenerator waterlilyGen`
- `int waterlilyPerChunk`
